# downloader-hub

./: .gitignore  Cargo.toml  justfile
.docker/app/: Dockerfile
.github/workflows/: deploy.yaml
bins/downloader-cli/: Cargo.toml
bins/downloader-cli/src/: main.rs
bins/downloader-cli/src/config/: mod.rs
bins/downloader-hub/: Cargo.toml
bins/downloader-hub/src/: db.rs  main.rs
bins/downloader-hub/src/config/: mod.rs
bins/downloader-hub/src/queue/: mod.rs
bins/downloader-hub/src/server/: mod.rs
bins/downloader-hub/src/server/app_middleware/: auth.rs
bins/downloader-hub/src/server/routes/v1/handlers/download/: download_result.rs
bins/downloader-hub/src/service/: signature.rs
bins/downloader-telegram-bot/: Cargo.toml
bins/downloader-telegram-bot/src/: main.rs
bins/downloader-telegram-bot/src/bot/: mod.rs
bins/downloader-telegram-bot/src/config/: mod.rs
bins/downloader-telegram-bot/src/queue/common/: file.rs  file_group.rs  mod.rs
bins/downloader-telegram-bot/src/queue/processor/: mod.rs
bins/downloader-telegram-bot/src/queue/processor/handlers/download_request/: mod.rs
crates/app-actions/: Cargo.toml
crates/app-actions/src/: lib.rs
crates/app-actions/src/actions/common/: action_result.rs
crates/app-actions/src/actions/handlers/: mod.rs  ocr_image.rs  split_scenes.rs
crates/app-actions/src/config/: mod.rs
crates/app-actions/src/downloaders/handlers/: generic.rs  mod.rs  yt_dlp.rs
crates/app-actions/src/downloaders/handlers/music/: mod.rs  spotifydown.rs
crates/app-actions/src/downloaders/helpers/headers/: content_disposition.rs
crates/app-actions/src/extractors/handlers/: bsky.rs  instagram.rs  mod.rs  reddit.rs  tiktok.rs  tumblr.rs  twitter.rs
crates/app-actions/src/extractors/handlers/activity_pub/: mod.rs
crates/app-actions/src/fixers/common/: crop_filter.rs
crates/app-actions/src/fixers/handlers/: crop_image.rs  crop_video_bars.rs  media_formats.rs  mod.rs
crates/app-config/: Cargo.toml
crates/app-config/src/: common.rs  lib.rs
crates/app-config/src/common/: endpoint.rs  mod.rs  program_path.rs  project.rs  task.rs
crates/app-config/src/conditional/: mod.rs
crates/app-config/src/traits/: dumpable.rs  global_config.rs  mod.rs
crates/app-config/src/validators/: mod.rs
crates/app-entities/: Cargo.toml
crates/app-helpers/: Cargo.toml
crates/app-helpers/src/: dirs.rs  ffprobe.rs  id.rs  ip.rs  lib.rs  temp_dir.rs  temp_file.rs
crates/app-helpers/src/config/: mod.rs
crates/app-logger/: Cargo.toml
crates/app-logger/src/: lib.rs
crates/app-macros/: Cargo.toml
crates/app-macros/src/: lib.rs
crates/app-migration/: Cargo.toml
crates/app-migration/src/: common.rs
crates/app-tasks/src/: lib.rs
crates/app-tasks/src/config/: mod.rs
crates/app-tasks/src/cron/: mod.rs
crates/downloader-cli/src/: main.rs
crates/downloader-hub/: Cargo.toml
crates/downloader-hub/src/queue/processor/: download_result.rs
crates/downloader-hub/src/server/: mod.rs
crates/downloader-hub/src/server/routes/v1/handlers/download/: download_request.rs
crates/downloader-hub/src/service/: signature.rs
crates/downloader-telegram-bot/: Cargo.toml
crates/downloader-telegram-bot/src/queue/: mod.rs
crates/downloader-telegram-bot/src/queue/task/: mod.rs
