[workspace]
members = [
  "crates/*",
  "bins/*"
]
resolver = "2"

[workspace.package]
version = "0.7.0"
authors = ["Allypost"]
description = "A meme downloader"
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
app-actions = { version = "*", path = "crates/app-actions" }
app-config = { version = "*", path = "crates/app-config" }
app-helpers = { version = "*", path = "crates/app-helpers" }
app-logger = { version = "*", path = "crates/app-logger" }
app-tasks = { version = "*", path = "crates/app-tasks" }
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["alloc", "serde"] }
futures = { version = "0.3.31", features = ["thread-pool"] }
serde = { version = "1.0", features = ["derive", "alloc", "rc"] }
serde_json = { version = "1.0" }
thiserror = "2.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs", "process"] }
tracing = { version = "0.1.41" }
url = { version = "2.5.4", features = ["serde"] }

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
# expect_used = "warn"
module_name_repetitions = "allow"
single_match_else = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
no_effect_underscore_binding = "allow"
cognitive_complexity = "allow"
unnecessary_debug_formatting = "allow"

[profile.release]
strip = true
# opt-level = "s"
lto = "thin"
# panic = "abort"
codegen-units = 1

[profile.release-cli]
inherits = "release"
opt-level = "s"
lto = true
panic = "abort"
