[package]
name = "downloader-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-actions.workspace = true
app-config.workspace = true
clap.workspace = true
futures.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "json",
    "local-time",
    "time",
    "parking_lot",
] }
url.workspace = true
validator.workspace = true

[lints]
workspace = true
