[package]
name = "downloader-telegram-bot"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-actions.workspace = true
app-config.workspace = true
app-helpers.workspace = true
app-logger.workspace = true
app-tasks.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
deadqueue = "0.2.5"
dotenvy = "0.15.7"
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
teloxide = { version = "0.17.0", default-features = false, features = ["cache-me", "macros", "rustls", "trace-adaptor"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid = "1.2.1"
url.workspace = true
validator.workspace = true

[lints]
workspace = true
