[package]
name = "app-config"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.45", features = ["derive", "env"] }
clap_complete = "4.5.57"
directories = "6.0.0"
serde.workspace = true
serde_json.workspace = true
toml = "0.9.5"
url.workspace = true
validator = { version = "0.20.0", features = ["derive"] }
which = "8.0.0"

[features]
default = []
server = []
cli = []
telegram-bot = []

[lints]
workspace = true
